# darknet

./: CMakeLists.txt  Makefile  an_empty_file.cpp
cmake/: Findnanomsg.cmake
protos/: helloworld.proto
src/: convolutional_layer.c  demo.c  demo.h  detector.c  greeter_client.cc  grpc.cc  pub-server.c  pub-server.h  rpc.h  sub-client.c  yolo.c
